Make sure detail images are hidden by default

--- a/src/lanes.scss
+++ b/src/lanes.scss
@@ -131,6 +131,7 @@ html, body {
 }
 
 .searchresult .resultDetails {
+  display: none;
   height: auto;
   background-color: #FFFFFF;
   margin: 7px 0px 7px 7px;
